# minecraft-server-dashboard

./: .dockerignore  .gitignore  .graphqlconfig.yml  CLAUDE.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  PR_READY.md  RACE_CONDITION_FIX.md  README.md  README.md.old  REDESIGN.md  SSM_QUEUE_SUMMARY.md  TECH_STACK_ANALYSIS.md  TESTING.md  amazon-cloudwatch-agent.json  amplify.yml  appconfig.sh  circli-working.yaml  cognito_config.sh  complexity_report.md  config-test.json  create-env-from-cfn-stack.sh  docker-compose.yml  fix-iam-permissions.sh  get-stack-config.sh  notes.txt  package-lock.json  package.json  pyproject.toml  resolvers-cloudformation-template.yaml  samconfig.toml  schema.graphql  setup-secrets.sh  setup.cfg  state-management-improvements.md  step-functions.json  template.yaml  test_ec2helper_format.py  test_eventbridge.py
.amazonq/: tech_spec.md
.aws-sam/: build.toml
.circleci/: config.yml
amplify/: team-provider-info.json
appsync/: schema.graphql
cfn/: circle-ci.yaml  msd-circleci-stack.yaml  template.yaml  template.yaml.old
dashboard/: .env  .gitignore  README.md  README.md.old  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  test-timezone-conversion.html  vite.config.js
docker-migration/: TASK11_COMPLETE.md  TASK12_COMPLETE.md  TASK13_COMPLETE.md  TASK14_COMPLETE.md  TASK15_COMPLETE.md  (+10 more)
rust/msd-ecs-metrics/: Cargo.toml  Dockerfile  README.md  build.sh
rust/msd-ecs-metrics/src/: main.rs
rust/msd-metrics/: .dockerignore  Cargo.toml  Dockerfile  README.md
rust/msd-metrics/src/: main.rs
(+426 files in other folders)
