[package]
name = "msd-ecs-metrics"
version = "0.2.0"
edition = "2021"

[dependencies]
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-cloudwatch = "1.100.0"
sysinfo = "0.33"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mc-query = "2.0.0"
reqwest = { version = "0.11", features = ["json"] }
